# datum-sim

./: README.md  __main__.py  main_widget.py  pyproject.toml  viewport.py
datum_sim/: __main__.py
datum_sim/core/: camera.py  gcode_parser.py  machine_backend.py  settings.py  sim_engine.py  toolpath.py  toolpath_math.py  toolstate.py
datum_sim/renderer/: toolpath_renderer.py
datum_sim/ui/: main_widget.py  viewport.py
datum_sim/ui/overlay/: control_hub.py  settings_panel.py
datum_sim/ui/overlay/panels/: cam_panel.py  sim_panel.py
